@@ -1,3 +1,7 @@
+2004-06-01  Caleb Moore <c.moore@student.unsw.edu.au>
+	
+	* rsvg-paint-server.c: fixed bug 139268
+
 2004-05-28  Caleb Moore <c.moore@student.unsw.edu.au>
 	
 	* rsvg-css.c: fixed typos in css colour definitions
